--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,12 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
