--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.3 <3.0.0'
+  sdk: '>=2.7.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,9 +35,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.3
-  carousel_slider: ^4.2.1
+  cupertino_icons: ^1.0.0
+  google_fonts: ^1.1.2
+  carousel_slider: ^3.0.0
+  provider: ^4.3.3
+  http: ^0.12.2
+  intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
